--- a/syllabus/syllabus.tex
+++ b/syllabus/syllabus.tex
@@ -6,7 +6,7 @@
 \usepackage{multirow}
 \title{ECON 2250: Statistics for Economists}
 \author{Jim Crozier}
-\date{Fall 2022}
+\date{Spring 2023}
 
 \usepackage[sc]{mathpazo}
 \linespread{1.05}         % Palatino needs more leading (space between lines)
@@ -43,7 +43,7 @@
 \usepackage{layout}   
 \lhead{}
 \chead{}
-\rhead{\footnotesize Statistics for Economics  -- Fall 2022}
+\rhead{\footnotesize Statistics for Economics  -- Spring 2023}
 \lfoot{}
 \cfoot{\small \thepage/\pageref*{LastPage}}
 \rfoot{}
@@ -73,12 +73,12 @@
   Repo: \href{http://github.com/jimcrozier/gt\_econ2250}{\tt\bf github.com/jimcrozier/gt\_econ2250}  \\
 
 
-  Class Hours: MWF 12:30 - 1:20 \\
-  Class location: 	Van Leer E361 \\
+  Class Hours: TTH 8-9:15AM \\
+  Class location: 	Skiles 171 \\
 
-  Office Hours: Fridays 2-3PM  \\
-Office: 310 of the Rich Computer Center  \\
-TA: Christopher Kitchens, email: christopher.kitchens@gatech.edu \\
+Office Hours: Tuesdays 9-10AM, following class \\
+Office: 310 of the Rich Computer Center \\
+TA: Brice Dumas, email: bdumas3@gatech.edu \\
 &  \\
 \hline
 \end{tabular*}
@@ -87,7 +87,7 @@ TA: Christopher Kitchens, email: christopher.kitchens@gatech.edu \\
 
 \section*{Course Description}
 
-In this class we will cover an introduction into statistical computing which is a cornerstone to economic research. The course will be about one half statistical concepts [e.g. counts, summary statistics, and the basics of building statistical models], and one half practical coding skills that are necessary for estimating these concepts. I assume that the incoming student has a general knowledge of mathematical principals, most importantly familiarity with manipulating algebraic equations as well as basic probability theory and intuition. I also assume that the student has a basic understanding of python and notebooks. Although each of these subjects will be taught from the ground up, if this is the first encounter with any of these concepts then I expect a pretty steep learning curve. 
+In this class we will cover an introduction into statistical computing which is a cornerstone to economic research. The course will be about one half statistical concepts [e.g. counts, summary statistics, and the basics of building statistical models], and one half practical coding skills that are necessary for estimating these concepts. I assume that the incoming student has a general knowledge of mathematical principles, most importantly familiarity with manipulating algebraic equations as well as basic probability theory and intuition. I also assume that the student has a basic understanding of python and notebooks. Although each of these subjects will be taught from the ground up, if this is the first encounter with any of these concepts then I expect a pretty steep learning curve. 
 
 
 
@@ -131,10 +131,9 @@ course page.  You may access Canvas at https://canvas.gatech.edu/.
 
 \subsection*{Grading Policy}
 \begin{itemize}
-\item \underline{\textbf{40\%}} of your grade will be determined by your homework videos. There will be a total of 10 homework videos graded (see below) and I will drop the lowest two grades and average the others. 
+\item \underline{\textbf{40\%}} of your grade will be determined by your homework videos. There will be a total of 11 homework videos graded (see below) and I will drop the lowest grade and average the others. 
 \item \underline{\textbf{25\%}} of your grade will be determined by the midterm grade. 
 \item \underline{\textbf{35\%}} of your grade will be determined by a final exam.
-\item \underline{\textbf{5\%}} extra credit (see below). 
 \end{itemize}
 
 
@@ -166,12 +165,12 @@ D&1.0 & Passing&  60\%-69.99\%\\
 
 
 \subsubsection*{Homework Videos}
-Homeworks are due on Thursday morning at 10AM EST. Submit the video (youtube link) and colab notebook link to Canvas. 
+Homeworks are usually due on Sundays, but I reserve the right to change this as needed throughout the semester. Submit the video (youtube or loom link) and colab notebook link to Canvas. 
 
-\textbf{*** Because I am dropping your two lowest, I am not accepting late homework. Homework submitted at 10:01AM will not be accepted. ***}
+\textbf{*** Because I am dropping the lowest, I am not accepting late homework. ***}
 
 
-Each week that we do not have an exam (see schedule) you will have to submit a *no longer than* 2 minute video of your notebook assignment for that week, along with the notebook. You are welcome to work with others on the homework assignment, but your video and your code/notebook will need to be your own. The videos will reviewed by the TA and given an 0-100\% grade, although final grades for the assignments will be determined by me and your talk to me if you have any issues. As always, respect and kindness are expected in all communications. This is homework so my intention here is that a good shot at the work, and admitting what you can't get should be a 100\%. The general idea here is to help you build your voice of your analysis. The grading rubric for the assignment are:
+Most weeks that we do not have an exam (see schedule) you will have to submit a *no longer than* 2 minute video of your notebook assignment for that week, along with the notebook. You are welcome to work with others on the homework assignment, but your video and your code/notebook will need to be your own. The videos will reviewed by the TA and given an 0-100\% grade, although final grades for the assignments will be determined by me and your talk to me if you have any issues. As always, respect and kindness are expected in all communications. This is homework so my intention here is that a good shot at the work, and admitting what you can't get should be a 100\%. The general idea here is to help you build your voice of your analysis. The grading rubric for the assignment are:
   \begin{itemize}
 \item \underline{\textbf{50\%}} does the notebook achieve the directions, or at least make a solid stab at and explain what they couldn't get in their video.  
 	\item \underline{\textbf{40\%}} does the video express the ideas of the analysis in a straightforward that explains what the author believes and how confident they are in the results. Just screen cast the notebook and explain what you did, and even what you didn't understand. 
@@ -188,13 +187,6 @@ The point of these exercises is to get better at stats and coding, please do not
 
 \subsubsection*{Exams}
 Midterm and final will be cumulative and cover statistical concepts and test the ability to read output of statistical code and explain the outputs in well formulated arguments that address central tendency and dispersion.
-
-
-\subsubsection*{Extra Credit}
-The repo for this class will include links to *open source* videos, lectures, papers, datasets, code that link to each lecture. If you *CREATE A \href{https://docs.github.com/en/pull-requests/collaborating-with-pull-requests/proposing-changes-to-your-work-with-pull-requests/creating-a-pull-request}{\tt\bf  PULL REQUEST} * to add an interesting contribution you can earn 1 point to your grade, up to 5 points.
-
-
-*Open source is a minimum of MIT license. I will NOT merge a PR if the content does not have a OS license.
 
 
 
@@ -247,135 +239,120 @@ I make any changes.
 \subsection*{Schedule (subject to change)}
 
 \begin{itemize}
-  \item \underline{\textbf{Week 1 (2022/08/22 - 2022/08/26):}} Load data, summary stats, simple graphs, making videos.
+  \item \underline{\textbf{Week 1 (2023/01/10 - 2023/01/12):}} Load data, summary stats, simple graphs, making videos.
   \begin{itemize}
-    \item 2022/08/22: Introductions, syllabus, colab intro.
-    \item 2022/08/24: Colab deep dive, python intro.
-    \item 2022/08/26: Data types, summary statistics.
+    \item 2023/01/10: Introductions, syllabus, colab intro.
+    \item 2023/01/12: Colab deep dive, python intro, data types, summary statistics.
   \end{itemize}
   
-  \item \underline{\textbf{Week 2 (2022/08/29 - 2022/09/02):}} Continuous vs discrete, counts, descriptive stats.
+  \item \underline{\textbf{Week 2 (2023/01/17 - 2023/01/19):}} Continuous vs discrete, counts, descriptive stats.
   \begin{itemize}
-    \item 2022/08/29: Colab and summary statistics type reveiw. 
-    \item 2022/08/31: Colab deep dive, python intro, discreet vs continuous.
-    \item 2022/09/01: HW1 due: Loading data into colab and making first video.
-    \item 2022/09/02: Summary stats tables: mean, median, and standard deviation. 
+    \item 2023/01/17: Colab and summary statistics type reveiw. 
+    \item 2023/01/19: Colab deep dive, python intro, discreet vs continuous.
+    \item 2023/01/22: HW1 due: Loading data into colab and making first video.
   \end{itemize}
 
-  \item \underline{\textbf{Week 3 (2022/09/05 - 2022/09/09):}} Dependent vs independent, light causality. 
+  \item \underline{\textbf{Week 3 (2023/01/24 - 2023/01/26):}} Dependent vs independent, light causality. 
   \begin{itemize}
-    \item 2022/09/05: LABOR DAY BREAK
-    \item 2022/09/07: Reveiw mean, median, standard deviation. 
-    \item 2022/09/08: HW2 due: mean, median, standard deviation.
-    \item 2022/09/09: Dependent vs indendepent variable, deep dive a data frame. 
-  \end{itemize}
-
-
-  \item \underline{\textbf{Week 4 (2022/09/12 - 2022/09/16):}} Probability review. 
-  \begin{itemize}
-    \item 2022/09/12: Reveiw depdentent vs independent, discuss probability. 
-    \item 2022/09/14: Rules of probability. 
-    \item 2022/09/15: HW3 due: depvar and covariates, light probabilty exercises.
-    \item 2022/09/16: Review  of probability rules. 
-  \end{itemize}
-
-  \item \underline{\textbf{Week 5 (2022/09/19 - 2022/09/23):}} Probability review 2: Conditional Probability.
-  \begin{itemize}
-    \item 2022/09/19: Conditional probability, bayes rule.
-    \item 2022/09/21: More of that, it's tricky. 
-    \item 2022/09/22: HW4 due: some fun stuff with conditional probabilty and functions.
-    \item 2022/09/23: Pull together probabilty review. 
+    \item 2023/01/24: Reveiw mean, median, standard deviation. 
+    \item 2023/01/26: Dependent vs indendepent variable, deep dive a data frame. 
+    \item 2023/01/29: HW2 due: mean, median, standard deviation.
   \end{itemize}
 
 
-  \item \underline{\textbf{Week 6 (2022/09/26 - 2022/09/30):}} Summation notation. 
+  \item \underline{\textbf{Week 4 (2023/01/31 - 2023/02/03):}} Probability review. 
   \begin{itemize}
-    \item 2022/09/26: We are going to have to spend some time on notation, here is where we dive  in to the summation operator.
-    \item 2022/09/28: Some work on the error term to the sum of squares. 
-    \item 2022/09/08: HW5 due: turn that math into code using the summation operator and functions.
-    \item 2022/09/30: review of stats proofs and summation notation. We are going to need it quite a bit. 
+    \item 2023/01/31: Reveiw depdentent vs independent, discuss probability. 
+    \item 2023/02/02: Rules of probability. 
+    \item 2023/02/05: HW3 due: depvar and covariates, light probabilty exercises.
+  \end{itemize}
+
+  \item \underline{\textbf{Week 5 (2023/02/07 - 2023/02/10):}} Probability review 2: Conditional Probability.
+  \begin{itemize}
+    \item 2023/02/07: Conditional probability, bayes rule.
+    \item 2023/02/09: Pull together probabilty review. 
+    \item 2023/02/12: HW4 due: some fun stuff with conditional probabilty and functions.
+
   \end{itemize}
 
 
-  \item \underline{\textbf{Week 7 (2022/10/03 - 2022/10/07):}} Correlation and model introduction. 
+  \item \underline{\textbf{Week 6 (2023/02/14 - 2023/02/16):}} Summation notation. 
   \begin{itemize}
-    \item 2022/10/03: (progress report) Introduction to model building and correlation of independent and dependent variables.
-    \item 2022/10/07: No semester is complete with correlation vs causation, this is that lecture. 
-    \item 2022/09/08: HW6 due: correlation vs causation the notebook. 
-    \item 2022/10/09: Digging further into correlation. 
-  \end{itemize}
+    \item 2023/02/14: We are going to have to spend some time on notation, here is where we dive  in to the summation operator.
+    \item 2023/02/16: review of stats proofs and summation notation. We are going to need it quite a bit. 
+    \item 2023/02/19: HW5 due: turn that math into code using the summation operator and functions.
 
-  \item \underline{\textbf{Week 8 (2022/10/10 - 2022/10/14):}} Review and Midterm: conditional prob to correlation.
-  \begin{itemize}
-    \item 2022/10/10: Reveiw probabilty rules. 
-    \item 2022/10/12: Review correlation. 
-    \item 2022/10/14: MIDTERM EXAM - you got this. 
-  \end{itemize}
-
-  \item \underline{\textbf{Week 9 (2022/10/17 - 2022/10/21):}} Average Treatment Effect.
-  \begin{itemize}
-    \item 2022/10/17: FALL BREAK 
-    \item 2022/10/19: Review of midterm material. Discusss average treatment effect. 
-    \item 2022/10/21: Average treatment effect further discussion. 
-  \end{itemize}
-
-  \item \underline{\textbf{Week 10 (2022/10/24 - 2022/10/28):}} Linear regression. 
-  \begin{itemize}
-    \item 2022/10/24: Error term, sum of squared residual, and best fit line. 
-    \item 2022/10/26: Linear regression summation notation. 
-    \item 2022/10/27: HW7 due: linear regression model in sklearn.
-    \item 2022/10/28: Futher discussion on linear regression model assumptions. 
-    \item 2022/10/29: WITHDRAWAL DEADLINE
   \end{itemize}
 
 
-  \item \underline{\textbf{Week 11 (2022/10/31 - 2022/11/04):}} Linear regression 2. 
+  \item \underline{\textbf{Week 7 (2023/02/21 - 2023/02/23):}} Correlation and model introduction. 
   \begin{itemize}
-    \item 2022/10/31: Reveiw of simple regression and model assumptions.
-    \item 2022/11/02: Linear model predictions.
-    \item 2022/11/03: HW8 due: Linear model predictions. 
-    \item 2022/11/04: More talk of linear model assumptions. 
+    \item 2023/02/21: (progress report) Introduction to model building and correlation of independent and dependent variables.
+    \item 2023/02/23: No semester is complete with correlation vs causation, this is that lecture. 
+    \item 2023/02/26: HW6 due: correlation vs causation the notebook. 
+  \end{itemize}
+
+  \item \underline{\textbf{Week 8 (2023/02/28 - 2023/03/02):}} Review and Midterm: conditional prob to correlation.
+  \begin{itemize}
+    \item 2023/02/28: Reveiw probabilty rules and correlation. 
+    \item 2023/03/02: MIDTERM EXAM - you got this. 
+  \end{itemize}
+
+  \item \underline{\textbf{Week 9 (2023/03/07 - 2023/03/09):}} Average Treatment Effect.
+  \begin{itemize}
+    \item 2023/03/07: Review of midterm material. Discusss average treatment effect. 
+    \item 2023/03/09: Average treatment effect further discussion. 
+    \item 2023/03/12: HW7 due: Average treatment effect. 
+  \end{itemize}
+
+  \item \underline{\textbf{Week 10 (2023/03/14 - 2023/03/16):}} Linear regression. 
+  \begin{itemize}
+    \item 2023/03/14: Error term, sum of squared residual, and best fit line. 
+    \item 2023/03/16: Linear regression summation notation. 
+    \item 2023/03/19: HW8 due: linear regression model in sklearn.
   \end{itemize}
 
 
-  \item \underline{\textbf{Week 12 (2022/11/07 - 2022/11/11):}} Standard error. 
+  \item \underline{\textbf{Week 11 (2023/03/21 - 2023/03/23):}} Linear regression 2. 
   \begin{itemize}
-    \item 2022/11/07: Dispersion, and why it matters. We're really starting to pull everything together now.
-    \item 2022/11/09: Calulating standard errors. 
-    \item 2022/11/10: HW9 due: linear model dispersion notebook. 
-    \item 2022/11/11: More time on standard errors.
+    \item 2023/03/21: SPRING BREAK
+    \item 2023/03/24: SPRING BREAK
   \end{itemize}
 
 
-  \item \underline{\textbf{Week 13 (2022/11/14 - 2022/11/18):}} Test for significance. 
+  \item \underline{\textbf{Week 12 (2023/03/28 - 2023/03/30):}} Standard error. 
   \begin{itemize}
-    \item 2022/11/14: What is significance?
-    \item 2022/11/16: Calcuating significance and expressing in your results. 
-    \item 2022/11/17: HW10 due: tie it all together with model and significance testing. 
-    \item 2022/11/18: Further digressions on testing significance. 
+    \item 2023/03/28: Central Limit Thereom and the t distribtion. 
+    \item 2023/03/30: Calulating standard errors. 
+    \item 2023/04/02: HW9 due: Simulation of the central limit theorem.
   \end{itemize}
 
 
-  \item \underline{\textbf{Week 14 (2022/11/21 - 2022/11/25):}} Continuous vs discrete modeling. 
+  \item \underline{\textbf{Week 13 (2023/04/04 - 2023/04/06):}} Test for significance. 
   \begin{itemize}
-    \item 2022/11/21: Bonus material: continuous vs discreete model, and why you would care. 
-    \item 2022/11/23: THANKSGIVING BREAK
-    \item 2022/11/25: THANKSGIVING BREAK
+    \item 2023/03/04: What is significance?
+    \item 2023/03/06: Calcuating significance and expressing in your results. 
+    \item 2023/03/09: HW10 due: tie it all together with model and significance testing. 
   \end{itemize}
 
 
-  \item \underline{\textbf{Week 15 (2022/11/28 - 2022/12/02):}} Bring it all together. 
+  \item \underline{\textbf{Week 14 (2023/04/11 - 2023/04/13):}} Continuous vs discrete modeling. 
   \begin{itemize}
-    \item 2022/11/28: Review week (nothing new): Working together we'll take a continuous and discreet problem: tell summary stats
-    \item 2022/11/30: Continue above with build a linear model, work out the math, code it up
-    \item 2022/12/02: Continue the above show model fit and significance tests. 
+    \item 2023/04/11: Reading regression tables wrt standard error, t stat, and confidence intervals.   
+    \item 2023/04/13: Wrap up statistical significance. 
+    \item 2023/04/16: HW11 due: relationship between statistical significance and confidence interval. 
   \end{itemize}
 
-  \item \underline{\textbf{Week 16 (2022/12/05 - 2022/12/09):}} Final Exam
+
+  \item \underline{\textbf{Week 15 (2023/04/18 - 2023/04/20):}} Bring it all together. 
   \begin{itemize}
-    \item 2022/12/28: Review
-    \item 2022/12/30: READING DAY
-    \item 2022/12/02: Final exam
+    \item 2023/04/18: Review week: probability and correlation. 
+    \item 2023/04/20: Review week: linear model, significance testing, confidence intervals, central limit theorem. 
+  \end{itemize}
+
+  \item \underline{\textbf{Week 16 (2023/05/01 ):}} Final Exam
+  \begin{itemize}
+    \item 2023/05/01: Final exam
   \end{itemize}
 \end{itemize}
 
